...
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/cat_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cat_image_height"
            app:layout_constraintBottom_toTopOf="@id/cat_fact_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">

...
            android:src="@drawable/ic_button"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/categories_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/normal_margin"
            android:backgroundTint="@color/button_color"
            android:elevation="@dimen/fab_elevation"
...
